# argon2-gpu

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
data/: data
data/kernels/: argon2_kernel.cl
include/argon2-cuda/: cudaexception.h  device.h  globalcontext.h  kernels.h  processingunit.h  programcontext.h
include/argon2-gpu-common/: argon2-common.h
include/argon2-opencl/: kernelrunner.h  processingunit.h
lib/argon2-cuda/: device.cpp  kernels.cu  kernels.h  processingunit.cpp
lib/argon2-gpu-common/: argon2params.cpp  blake2b.h
lib/argon2-opencl/: kernelrunner.cpp  processingunit.cpp
scripts/: benchmark-commits-v2.sh  benchmark-commits.sh  ci-build.sh  ci-test.sh  ci.sh  compare-commits-v2.R  compare_commits.R  gpu-vs-cpu-v2.R  gpu_vs_cpu.R  run-benchmark-m_cost.sh  run-benchmark-t_cost.sh  run-benchmark.sh
scripts/metacentrum/: start-benchmark-common.sh  start-benchmark-cpu.sh  start-benchmark-gpu.sh  start-benchmark.sh
src/argon2-gpu-bench/: benchmark.h  cpuexecutive.cpp  cudaexecutive.cpp  main.cpp  openclexecutive.cpp
src/argon2-gpu-test/: argon2-functions.h  global.cpp  global.h  main-functions.h  main.cpp  server.cpp
